# blawx_mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/adr/: 0001-contextvars-settings.md
src/: template.html
src/blawx_mcp/: __init__.py  config.py  guides.py  schemas.py  server.py
src/blawx_mcp/md_guides/: blawx_blocks.md  blawx_json.md  encoding_examples.md  encoding_process.md  encodingpart.md  legaldocs.md  ontology.md  scasp.md  valid_blawx_json.md
src/blawx_mcp/ui/: VENDOR.md  answer_viewer.html  code_viewer.html  viewer-bundle.js
tests/: test_code_viewer.py  test_config.py
