[project]
name = "blawx-mcp"
version = "0.3.0"
description = "Local MCP server for Blawx app API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.4.0",
  "httpx>=0.27.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
blawx-mcp = "blawx_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blawx_mcp = ["md_guides/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
